--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div><a routerLink="" class="archiTitle">Archimydes - User Stories</a></div>
   <span class="nav-tool-items">
     <a mat-button routerLink="login" *ngIf="!isloggedin" mat-raised-button routerLinkActive="active">Log in</a>
-    <a mat-button routerLink="register">Register</a>
+    <a mat-button routerLink="register" *ngIf="!isloggedin">Register</a>
     <a mat-button (click)="logout()" *ngIf="isloggedin">Log out</a>
 
   </span>
