--- a/src/app/components/admin-story-list/admin-story-list.component.html
+++ b/src/app/components/admin-story-list/admin-story-list.component.html
@@ -7,7 +7,7 @@
 </div>
 
 
-<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+<table mat-table [dataSource]="userStories" matSort class="mat-elevation-z8">
   
     <!-- ID Column -->
     <ng-container matColumnDef="id">
@@ -40,9 +40,9 @@
     </ng-container>
   
     <!-- Estimated time for completion Column -->
-    <ng-container matColumnDef="time">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Estimated time for completion </th>
-      <td mat-cell *matCellDef="let element"> {{element.time}} </td>
+    <ng-container matColumnDef="estimatedHrs">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Estimated Hours </th>
+      <td mat-cell *matCellDef="let element"> {{element.estimatedHrs}} </td>
     </ng-container>
   
     <!-- Cost Column -->
