--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -8,15 +8,45 @@
   
         <mat-card-content>
           <mat-form-field class="example-full-width">
-            <input matInput placeholder="Username">
+            <input 
+            ngModel
+            matInput 
+            type="text" 
+            placeholder="Username" 
+            name="username" 
+            #username="ngModel"
+            required>
+            <mat-error *ngIf="username.invalid && username.errors.required">
+              The username field is required.
+            </mat-error>
           </mat-form-field>
   
           <mat-form-field class="example-full-width">
-            <input matInput placeholder="Email">
+            <input 
+            ngModel
+            matInput 
+            type="email" 
+            placeholder="Email ID" 
+            name="email" 
+            #email="ngModel"
+            required>
+            <mat-error *ngIf="email.invalid && email.errors.required">
+              The email field is required.
+            </mat-error>
           </mat-form-field>
   
           <mat-form-field class="example-full-width">
-            <input matInput type="password" placeholder="Password">
+            <input 
+            ngModel
+            matInput 
+            type="password" 
+            placeholder="Password" 
+            name="password"
+            #password="ngModel"
+            required>
+            <mat-error *ngIf="password.invalid && password.errors.required">
+              The password field is required.
+            </mat-error>
           </mat-form-field>
   
         </mat-card-content>
