--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,14 @@
 <mat-toolbar color="primary" class="app-header">
   <div><a routerLink="" class="archiTitle">Archimydes - User Stories</a></div>
   <span class="nav-tool-items">
+    <!-- <span *ngIf="username">Welcome {{ username }} </span> -->
     <a mat-button routerLink="login" *ngIf="!isloggedin" mat-raised-button routerLinkActive="active">Log in</a>
     <a mat-button routerLink="register" *ngIf="!isloggedin">Register</a>
+    <a mat-button routerLink="create-user-story" *ngIf="isloggedin && !isAdminUser">Create User Story</a>
+    <a mat-button routerLink="user-story-list" *ngIf="isloggedin && !isAdminUser">User Story list</a>
+    <a mat-button routerLink="admin-story-list" *ngIf="isloggedin && isAdminUser">Admin Story list</a>
+    <a mat-button routerLink="admin-story-review" *ngIf="isloggedin && isAdminUser">Admin Story Review</a>
+
     <a mat-button (click)="logout()" *ngIf="isloggedin">Log out</a>
 
   </span>
