:rocket: chore: app core updates
- created the headers method for easy calling
- refactor getStories method
- refactor updateStory method
- refactor postStory method
- refactor auth guard for stricter checking of admin rights
- refactor the types and complexities interfaces
- refactor createUserStory method to make sure all values are filled out
- refactor userStory component to make sure fields are required
- refactor adminStoryReview component to include accepting and rejecting user story logic
- refactor adminStoryReview template to make sure fields are readonly and added event bindings for accepting and rejecting user stories
- added stylings for accepted and or rejected text
- refactor adminStoryList component to include fetching the selected user story for admin review
- refactor adminStoryList template to include row color coding to differentiate accepted/rejected/neutral stories.
- added the corresponding colors for the story list
- refactor app component to remove console logs
- refactor app template to remove the admin story review link
-- changed the logout text to material exit icon

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,13 @@
     <!-- <span *ngIf="username">Welcome {{ username }} </span> -->
     <a mat-button routerLink="login" *ngIf="!isloggedin" mat-raised-button routerLinkActive="active">Log in</a>
     <a mat-button routerLink="register" *ngIf="!isloggedin">Register</a>
-    <a mat-button routerLink="create-user-story" *ngIf="isloggedin && !isAdminUser">Create User Story</a>
+    <a mat-button routerLink="create-user-story" *ngIf="isloggedin">Create User Story</a>
     <a mat-button routerLink="user-story-list" *ngIf="isloggedin && !isAdminUser">User Story list</a>
     <a mat-button routerLink="admin-story-list" *ngIf="isloggedin && isAdminUser">Admin Story list</a>
-    <a mat-button routerLink="admin-story-review" *ngIf="isloggedin && isAdminUser">Admin Story Review</a>
 
-    <a mat-button (click)="logout()" *ngIf="isloggedin">Log out</a>
+    <button mat-icon-button aria-label="Logout icon" (click)="logout()" *ngIf="isloggedin">
+      <mat-icon>exit_to_app</mat-icon>
+    </button>
 
   </span>
 </mat-toolbar>
