--- a/src/app/components/admin-story-review/admin-story-review.component.css
+++ b/src/app/components/admin-story-review/admin-story-review.component.css
@@ -13,3 +13,16 @@
 .btn-red {
     color: red;
 }
+
+form > mat-card-content > mat-form-field, input, textarea, mat-select, mat-option {
+    cursor: not-allowed;
+}
+
+.accepted {
+    color: green;
+}
+
+.rejected {
+    color: red;
+}
+
