--- a/src/styles.css
+++ b/src/styles.css
@@ -24,3 +24,11 @@ body{
 .login-wrapper .mat-stroked-button{border:1px solid currentColor;line-height:54px;background:#FFF7FA;}
 .login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix{padding:0.8375em 0;}
 
+
+.accepted {
+    color: green;
+}
+
+.rejected {
+    color: red;
+}
